[package]
name = "test123"
version = "0.1.0"
edition = "2021"
authors = ["jp.raynaud@gmail.com"]
documentation =  "https://jpraynaud.me"
homepage = "https://jpraynaud.me"
license = "Apache-2.0"
repository = "https://github.com/jpraynaud-org/test123/"
description = "This is only a test123!"

include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
